--- a/data/build.gradle
+++ b/data/build.gradle
@@ -13,6 +13,14 @@ android {
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     consumerProguardFiles "consumer-rules.pro"
+
+    def properties = new Properties()
+    if (project.rootProject.file('local.properties').canRead()) {
+      properties.load(project.rootProject.file("local.properties").newDataInputStream())
+    }
+
+    buildConfigField 'String', 'BASE_URL', properties.getProperty('BASE_URL')
+    buildConfigField 'String', 'API_KEY', properties.getProperty('API_KEY')
   }
 
   buildTypes {
