--- a/data/build.gradle
+++ b/data/build.gradle
@@ -58,6 +58,7 @@ dependencies {
   kapt "androidx.room:room-compiler:$roomVersion"
   implementation "androidx.room:room-ktx:$roomVersion"
   implementation "androidx.room:room-rxjava2:$roomVersion"
+  implementation "androidx.room:room-paging:$roomPagingVersion"
   implementation "androidx.paging:paging-runtime:$pagingVersion"
   implementation "androidx.paging:paging-rxjava2:$pagingVersion"
 
